syntax = "proto3";

package api_order;

option go_package = "api_order";


import "api_order/common.proto";

// 支付成功
message PaySuccessToOrderReq{
    string trade_no = 1;
}

message PaySuccessToOrderRsp{
    int32 code = 1; 
    string msg = 2; 
    string log_id = 3; 
    PaySuccessToOrderRspData data = 4; 
    message PaySuccessToOrderRspData {
        string trade_no = 1;
    }
}

// 取消支付
message PayCancelToOrderReq{
    string trade_no = 1;
}
message PayCancelToOrderRsp{
    int32 code = 1; 
    string msg = 2; 
    string log_id = 3; 
    PayCancelToOrderRspData data = 4; 
    message PayCancelToOrderRspData {
        string trade_no = 1;
    }
}

