syntax = "proto3";

// protobuf的package，根据业务来定，一个文件夹下的package得是一样的
package api_pay;

// 和package保持一致
option go_package = "api_pay";

// 导入需要使用的文件，package/文件名
import "api/api.proto";
import "api_pay/pay.proto";
import "api_pay/webhook.proto";
import "api_pay/close_pay.proto";
import "api_pay/refund_pay.proto";

// rpc服务
service PayService {
    // 支付 
    rpc Pay(PayReq) returns (PayRsp) {
        option (api.post) = "/pay/pay";
    }

    // 支付宝异步回调
    rpc AlipayWebhook(AlipayWebhookReq) returns (AlipayWebhookRsp) {
        option (api.post) = "/pay/webhook/alipay";
    }

    // 取消支付
    rpc ClosePay(ClosePayReq) returns (ClosePayRsp) {
        option (api.post) = "/pay/close_pay";
    }

    // 退款
    rpc RefundPay(RefundPayReq) returns (RefundPayRsp) {
        option (api.post) = "/pay/refund_pay";
    }
}

