syntax = "proto3";

package order;

option go_package = "order";

import "order/common.proto";


message GetOrderItemsReq {
    string trade_no = 1;
}

message GetOrderItemsRsp {
    int32 code = 1;
    string msg = 2;
    string log_id = 3;
    GetOrderItemsRspData data = 4;

    message GetOrderItemsRspData {
        repeated BaseOrderItem order_item_list = 1;
    }
}