syntax = "proto3";

package pay;

option go_package = "pay";

message BasePayInfo{
    uint64 id = 1;
    string trade_no = 2;
    string pay_page_url = 3;
}