syntax = "proto3";

// protobuf的package，根据业务来定，一个文件夹下的package得是一样的
package pay;

// 和package保持一致
option go_package = "pay";

import "pay/common.proto";

message PayReq{
    string trade_no = 1;    // 电商平台交易号
    string subject = 2;     // 订单标题
    string totalAmount = 3; // 订单金额
    string pay_type = 4;    // 支付类型
}

message PayRsp{
    int32 code = 1; 
    string msg = 2; 
    string log_id = 3; 
    PayRspData data = 4; 
    message PayRspData{
        BasePayInfo pay_info = 1;
    }
}



// 重新拉起支付
message ReTradeReq {
    string trade_no = 1;
}

message ReTradeRsp {
    int32 code = 1;
    string msg = 2;
    string log_id = 3;
    ReTradeRspData data = 4;
    message ReTradeRspData {
        BasePayInfo pay_info = 1;
    }
}